fix: display square image on mobile

--- a/web/src/components/Common/Banner/Banner.module.scss
+++ b/web/src/components/Common/Banner/Banner.module.scss
@@ -7,16 +7,16 @@
   border: $border-standard;
 }
 
-// .DesktopImage {
-//   display: none;
-//   @include mq($breakpoint-mobileLandscape) {
-//     display: block;
-//   }
-// }
+.DesktopImage {
+  display: none;
+  @include mq($breakpoint-mobileLandscape) {
+    display: block;
+  }
+}
 
-// .MobileImage {
-//   display: block;
-//   @include mq($breakpoint-mobileLandscape) {
-//     display: none;
-//   }
-// }
+.MobileImage {
+  display: block;
+  @include mq($breakpoint-mobileLandscape) {
+    display: none;
+  }
+}
